--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "sebastianhof.com in Angular 2",
   "main": "app.js",
   "dependencies": {
-    "angular2": "^2.0.0-alpha.26"
+    "ejs": "^2.3.4",
+    "express": "^4.13.3"
   },
   "devDependencies": {},
   "scripts": {
