--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "sebastianhof.com in Angular 2",
   "main": "app.js",
   "dependencies": {
+    "bower": "^1.5.3",
     "ejs": "^2.3.4",
     "express": "^4.13.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
