--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "font-awesome": "~4.4.0",
     "jquery": "~2.1.4",
     "open-sans-fontface": "~1.4.2",
-    "requirejs": "~2.1.20"
+    "requirejs": "~2.1.20",
+    "roboto-fontface": "~0.4.3",
+    "themify-icons": "~0.1.0"
   }
 }
