--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "open-sans-fontface": "~1.4.2",
     "requirejs": "~2.1.20",
     "roboto-fontface": "~0.4.3",
-    "themify-icons": "~0.1.0"
+    "themify-icons": "~0.1.0",
+    "angular-translate-loader-static-files": "~2.8.1"
   }
 }
