--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "angular-translate-loader-static-files": "~2.8.1",
     "animate.css": "animate-css#~3.4.0",
     "scrollreveal": "scrollReveal.js#~2.3.2",
-    "PACE": "pace#~1.0.2"
+    "PACE": "pace#~1.0.2",
+    "angular-bootstrap": "~0.14.3"
   }
 }
