--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,11 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7",
-    "angular-cookies": "~1.4.7",
+    "angular": "~1.4.8",
+    "angular-cookies": "~1.4.8",
     "angular-new-router": "~0.5.3",
-    "angular-sanitize": "~1.4.7",
+    "angular-sanitize": "~1.4.8",
+    "angular-touch": "~1.4.8",
     "angular-translate": "~2.8.1",
     "bootstrap": "~3.3.5",
     "font-awesome": "~4.4.0",
@@ -33,6 +34,8 @@
     "animate.css": "animate-css#~3.4.0",
     "scrollreveal": "scrollReveal.js#~2.3.2",
     "PACE": "pace#~1.0.2",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "mobile-detect": "~1.3.0"
+
   }
 }
