--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-validator": "^2.18.0",
+    "lodash": "^3.10.1",
     "nodejs": "0.0.0",
     "sendgrid": "^1.9.2"
   },
