--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,7 @@
     "scrollreveal": "scrollReveal.js#~2.3.2",
     "PACE": "pace#~1.0.2",
     "angular-bootstrap": "~0.14.3",
-    "mobile-detect": "~1.3.0"
-
+    "mobile-detect": "~1.3.0",
+    "angular-markdown-directive": "~0.3.1"
   }
 }
