--- a/package.json
+++ b/package.json
@@ -17,22 +17,28 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
+    "autoprefixer": "^10.4.7",
     "aws-cdk": "2.8.0",
+    "jest": "^26.4.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
+    "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.8.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-cdk-lib": "2.8.0",
+    "constructs": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
+    "source-map-support": "^0.5.16",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
