--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "eject-react": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.101",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "autoprefixer": "^10.4.7",
-    "aws-cdk": "2.8.0",
+    "aws-cdk": "^2.33.0",
     "jest": "^26.4.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
@@ -30,8 +31,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "aws-cdk-lib": "2.8.0",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "^2.33.0",
+    "constructs": "^10.1.53",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
