--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-cdk-lib": "^2.33.0",
+    "aws-sdk": "^2.1181.0",
     "constructs": "^10.1.53",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
